Bug 558690 Textarea input fails unless one clicks elsewhere (addressbar, searchbar, forms, etc) first. r=karlt